# rspack

./: Cargo.toml
crates/rspack_cacheable/: Cargo.toml
crates/rspack_cacheable/src/: deserialize.rs  dyn.rs  lib.rs  serialize.rs
crates/rspack_cacheable/src/dyn/: mod.rs  validation.rs
crates/rspack_cacheable/src/with/: as_bytes.rs  as_custom.rs  as_inner.rs  as_map.rs  as_ref_str.rs  as_string.rs  as_tuple.rs  as_vec.rs  custom.rs  mod.rs  skip.rs
crates/rspack_cacheable/src/with/as_preset/: lightningcss.rs  mod.rs  rspack_resolver.rs  rspack_source.rs
crates/rspack_cacheable/src/with/as_preset/rspack_source/: mod.rs
crates/rspack_collections/: Cargo.toml
crates/rspack_core/: Cargo.toml
crates/rspack_error/: Cargo.toml
crates/rspack_hash/: Cargo.toml
crates/rspack_loader_lightningcss/: Cargo.toml
crates/rspack_loader_preact_refresh/: Cargo.toml
crates/rspack_loader_react_refresh/: Cargo.toml
crates/rspack_loader_runner/: Cargo.toml
crates/rspack_loader_testing/: Cargo.toml
crates/rspack_plugin_asset/: Cargo.toml
crates/rspack_plugin_css/: Cargo.toml
crates/rspack_plugin_extract_css/: Cargo.toml
crates/rspack_plugin_hmr/: Cargo.toml
crates/rspack_plugin_javascript/: Cargo.toml
crates/rspack_plugin_json/: Cargo.toml
crates/rspack_plugin_lazy_compilation/: Cargo.toml
crates/rspack_plugin_mf/: Cargo.toml
crates/rspack_plugin_runtime/: Cargo.toml
crates/rspack_plugin_wasm/: Cargo.toml
crates/rspack_regex/: Cargo.toml
crates/rspack_util/: Cargo.toml
website/: project-words.txt  rspress.config.ts
(+144 files in other folders)
