[package]
edition = "2021"
license = "MIT"
name    = "rspack_cacheable"
version = "0.1.0"

[dependencies]
dashmap         = { workspace = true }
hashlink        = { workspace = true }
indexmap        = { workspace = true }
inventory       = { workspace = true }
json            = { workspace = true }
lightningcss    = { workspace = true }
once_cell       = { workspace = true }
ptr_meta        = { workspace = true }
rkyv            = { workspace = true, features = ["validation", "strict"] }
rkyv_dyn        = { workspace = true, features = ["validation", "strict"] }
rkyv_typename   = { workspace = true }
rspack_macros   = { path = "../rspack_macros" }
rspack_resolver = { workspace = true }
rspack_sources  = { workspace = true }
rustc-hash      = { workspace = true }
serde_json      = { workspace = true }
swc_core        = { workspace = true, features = ["ecma_ast"] }
